--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </div>
       <div class="container">
         <img src="/images/stubborn.jpg" alt="" />
-      </div>
-      <div class="container">
-        <img src="images/vision.gif" alt="" />
+        <audio controls>
+          <source src="/music/Unstoppable.mp3" type="audio/mpeg" />
+        </audio>
       </div>
       <div class="container">
         <img src="images/who.jpg" alt="" />
@@ -44,8 +44,7 @@
       <div class="footer">
         <p>Dedicated to you on 5th December 2022 💙❤️</p>
         <p>Made with dedication, perseverence and integrity</p>
-        <p>Don't think anything just message me 👇</p>
-        <p>waitingforyou@gmail.com</p>
+        <p>you are unstoppable, You are invincible 💪</p>
       </div>
     </footer>
   </body>
