--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <div class="container">
         <img src="images/who.jpg" alt="" />
       </div>
+      <div class="neontext">
+        <h1 contenteditable spellcheck="false">happinessisinyou22@gmail.com</h1>
+      </div>
     </main>
     <footer>
       <div class="footer">
